Revision history for Image::Scale

0.05
        - Faster JPEG compression when using libjpeg-turbo.

0.04    2010-09-17 15:40:00
        - More fixes for CPAN testers.

0.03    2010-09-16 18:00:00
        - Fixed compilation on Windows.

0.02    2010-09-16 17:00:00
        - Fixed crash when reading JPEG images with large Exif tags.
        - Improved fixed-point performance for x86.
        - Fixes for various test failures.

0.01    2010-09-08 23:40:00
        - Initial release.